istio/infra/templates/opa-injection.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: inject-sidecar
  annotations:
    policies.kyverno.io/title: Inject Sidecar Container
    policies.kyverno.io/category: Sample
    policies.kyverno.io/subject: Pod,Volume
spec:
  rules:
  - name: inject-sidecar
    match:
      resources:
        kinds:
        - Deployment
    mutate:
      patchStrategicMerge:
        spec:
          template:
            metadata:
              annotations:
                (opa-istio-injection): "true"
            spec:
              containers:
              - name: opa-istio
                image: opa-istio-kms
                imagePullPolicy: IfNotPresent
                args: [
                  "run",
                  "--server",
                  "--bundle",
                  "--config-file=/config/config.yaml",
                  "--addr=localhost:8181"
                ]
                env:
                - name: AWS_STS_REGIONAL_ENDPOINTS
                  value: regional
                - name: AWS_DEFAULT_REGION
                  value: eu-west-2
                - name: AWS_REGION
                  value: eu-west-2
                - name: AWS_ROLE_ARN
                  value: ${opa_policy_fetch_role_arn}
                - name: AWS_WEB_IDENTITY_TOKEN_FILE
                  value: /svid/token
                volumeMounts:
                - mountPath: /config
                  name: opa-istio-config
                - name: svid
                  mountPath: /svid
                  readOnly: true
              volumes:
              - name: opa-istio-config
                configMap:
                  name: opa-istio-config
              - name: svid
                emptyDir:
                  medium: Memory
